@@ -4,39 +4,43 @@ import java.util.List;
 
 import org.minimalj.backend.Backend;
 import org.minimalj.frontend.Frontend;
-import org.minimalj.frontend.Frontend.IComponent;
-import org.minimalj.frontend.Frontend.Input;
 import org.minimalj.frontend.Frontend.Search;
 import org.minimalj.frontend.Frontend.TableActionListener;
 import org.minimalj.frontend.page.IDialog;
-import org.minimalj.model.Keys;
-import org.minimalj.model.Rendering;
 import org.minimalj.repository.query.By;
 
 // To make this class generic is a little bit senseless as
 // there are no checks at all
-public class ReferenceFormElement<T extends Rendering> extends AbstractFormElement<T> {
+public class ReferenceFormElement<T> extends AbstractLookupFormElement<T> {
 	private final Class<T> fieldClazz;
 	private final Object[] searchColumns;
-	protected final Input<T> lookup;
 	private IDialog dialog;
-	
-	@SuppressWarnings("unchecked")
-	public ReferenceFormElement(Object key, Object... searchColumns) {
-		super(Keys.getProperty(key));
-		fieldClazz = (Class<T>) getProperty().getClazz();
-		this.searchColumns = searchColumns;
-		lookup = Frontend.getInstance().createLookup(this::showSearchDialog, listener());
+
+	public ReferenceFormElement(T key, Object... searchColumns) {
+		this(key, false, searchColumns);
 	}
 
-	private void showSearchDialog() {
+	@SuppressWarnings("unchecked")
+	public ReferenceFormElement(T key, boolean textEditable, Object... searchColumns) {
+		super(key, textEditable, true);
+		fieldClazz = (Class<T>) getProperty().getClazz();
+		this.searchColumns = searchColumns;
+	}
+
+	@Override
+	protected void lookup() {
 		dialog = Frontend.showSearchDialog(new ReferenceFieldSearch(), searchColumns, new SearchDialogActionListener());
+	}
+
+	@Override
+	protected T parse(String text) {
+		return null;
 	}
 
 	private class SearchDialogActionListener implements TableActionListener<T> {
 		@Override
 		public void action(T selectedObject) {
-			lookup.setValue(selectedObject);
+			ReferenceFormElement.this.setValueInternal(selectedObject);
 			dialog.closeDialog();
 		}
 	}
@@ -47,20 +51,5 @@ public class ReferenceFormElement<T extends Rendering> extends AbstractFormEleme
 		public List<T> search(String searchText) {
 			return (List<T>) Backend.find(fieldClazz, By.search(searchText, searchColumns));
 		}
-	}
-	
-	@Override
-	public IComponent getComponent() {
-		return lookup;
-	}
-
-	@Override
-	public T getValue() {
-		return lookup.getValue();
-	}
-
-	@Override
-	public void setValue(T object) {
-		lookup.setValue(object);
 	}
 }
