@@ -5,6 +5,7 @@ Every release contains many small fixes.
 === next
 * historized sql repository: completely support historized references (and lists)
 * Remove RenderType. Redesign Rendering concept
+* Redesign Lookup UI concept
 
 === 1.14.0.0
 * Allow wizards to have a last step without active next button
